apps/plex/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
spec:
  type: NodePort
  selector:
    app: plex
  ports:
    - port: 32400
      targetPort: 32400
      nodePort: 32400
