apps/plex/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: plex
 namespace: media
spec:
 hostnames:
 - plex.tomasmerino.com
 parentRefs:
 - name: homelab-gateway
   namespace: networking
 rules:
  - backendRefs:
    - name: plex
      port: 32400
